tests/fixtures/pass/vec_zst_resource_drop_trap.sali
let Bomb = struct()

extend Bomb: Drop {
  let drop(mut borrow self)(): () = unsafe do {
    raw_trap()
  }
}

let main(): i32 = {
  let mut values: Vec(Bomb) = Vec(Bomb).new()
  values.push(Bomb())
  0
}
